Fix CI build issues with PHPCS not found
- Update ci.sh to check for vendor/bin/phpcs and reinstall if missing
- Update validate.sh to check for PHPCS binary before running
- Fix docker-compose.ci.yml to mount specific files instead of entire directory
- This prevents volume mount from overriding built vendor directory
- Add --prefer-dist flag to composer install for faster CI builds

Resolves: vendor/bin/phpcs: No such file or directory error in CI

--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -30,5 +30,16 @@ services:
       WORDPRESS_DB_PASSWORD: wppass
       CI: 1
     volumes:
-      - ..:/usr/src/app
+      # Only mount specific files needed for CI, not the entire directory
+      - ../composer.json:/usr/src/app/composer.json:ro
+      - ../composer.lock:/usr/src/app/composer.lock:ro
+      - ../package.json:/usr/src/app/package.json:ro
+      - ../yarn.lock:/usr/src/app/yarn.lock:ro
+      - ../wp-content:/usr/src/app/wp-content:ro
+      - ../includes:/usr/src/app/includes:ro
+      - ../templates:/usr/src/app/templates:ro
+      - ../wp-qr-trackr.php:/usr/src/app/wp-qr-trackr.php:ro
+      - ../config:/usr/src/app/config:ro
+      - ../scripts:/usr/src/app/scripts:ro
+      - ../ci.sh:/usr/src/app/ci.sh:ro
       - ~/.config/gh:/root/.config/gh
