--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -6,6 +6,7 @@ services:
       MYSQL_USER: wpuser
       MYSQL_PASSWORD: wppass
       MYSQL_ROOT_PASSWORD: root
+    command: ["mysqld", "--ssl=0", "--require_secure_transport=OFF"]
     ports:
       - 3306:3306
     healthcheck:
