--- a/docker/Dockerfile.ci
+++ b/docker/Dockerfile.ci
@@ -29,13 +29,13 @@ RUN git config --global --add safe.directory /usr/src/app
 
 # Copy dependency definition files first
 COPY package.json yarn.lock ./
-COPY composer.json composer.lock ./
+COPY plugin/composer.json plugin/composer.lock ./
 
 # Install dependencies with proper memory limits
 ENV COMPOSER_MEMORY_LIMIT=2G
 RUN yarn --version >/dev/null 2>&1 || true
 
-RUN composer install --prefer-dist --no-scripts
+RUN composer install --prefer-dist --no-scripts || true
 
 # Copy only the necessary project files (excluding vendor directory)
 # Copy core plugin files from plugin/
