--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -31,7 +31,9 @@ jobs:
           tools: composer
 
       - name: Install dependencies
-        run: composer install --no-dev --optimize-autoloader
+        run: |
+          cd plugin
+          composer install --no-dev --optimize-autoloader
 
       - name: Extract version from plugin
         id: version
