feat: Add editor user configuration for dev and nonprod environments
- Add editor user accounts (editor/editor) to both dev and nonprod environments
- Update plugin permissions to allow editors to manage QR codes using edit_posts capability
- Configure Docker environment variables for editor user credentials
- Update entrypoint scripts to create editor users automatically
- Update documentation to include editor user information and testing tips
- Maintain security by keeping system-level functions restricted to administrators
- Add comprehensive changelog entry for v1.2.73

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -20,6 +20,9 @@ services:
       WORDPRESS_ADMIN_USER: trackr
       WORDPRESS_ADMIN_PASSWORD: trackr
       WORDPRESS_ADMIN_EMAIL: dev@example.com
+      WORDPRESS_EDITOR_USER: editor
+      WORDPRESS_EDITOR_PASSWORD: editor
+      WORDPRESS_EDITOR_EMAIL: editor@example.com
       WORDPRESS_HOME: http://localhost:8080
     depends_on:
       - db-dev
