--- a/docker/docker-compose.nonprod.yml
+++ b/docker/docker-compose.nonprod.yml
@@ -17,6 +17,9 @@ services:
       WORDPRESS_ADMIN_USER: trackr
       WORDPRESS_ADMIN_PASSWORD: trackr
       WORDPRESS_ADMIN_EMAIL: nonprod@example.com
+      WORDPRESS_EDITOR_USER: editor
+      WORDPRESS_EDITOR_PASSWORD: editor
+      WORDPRESS_EDITOR_EMAIL: editor@example.com
       WORDPRESS_HOME: http://localhost:8081
     depends_on:
       db-nonprod:
